--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   flutter_colorpicker: ^1.0.3
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
